# cpp-template

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Doxyfile  Makefile  README.md  codecov.yml  conanfile.py  pyproject.toml
.github/: pull_request_template.md  release-please-config.json
.github/workflows/: ci.yml  release.yml
cmake/: version.cmake
cpp_template/: CMakeLists.txt
cpp_template/include/: foo.hpp  timeseries.hpp
cpp_template/src/: foo.cpp  main.cpp  timeseries.cpp
docs/html/: dir_000002_000001.html  dir_2e38d438c47eedd6715e94a039c6788b.html  dir_2e38d438c47eedd6715e94a039c6788b_dep.map  dir_2e38d438c47eedd6715e94a039c6788b_dep.md5  dir_4d74726f3d49a4e2a726b39662785ff5.html  dir_a13f861040688206f7e1e1f4f8e1c60b.html  dir_a13f861040688206f7e1e1f4f8e1c60b_dep.map  dir_a13f861040688206f7e1e1f4f8e1c60b_dep.md5  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacetimeseries.html  timeseries_8cpp.html  timeseries_8cpp__incl.map  timeseries_8cpp__incl.md5  timeseries_8hpp.html  timeseries_8hpp__dep__incl.map  timeseries_8hpp__dep__incl.md5  timeseries_8hpp__incl.map  timeseries_8hpp__incl.md5  timeseries_8hpp_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  searchdata.js
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: consumer.cpp
tests/: CMakeLists.txt
tests/unit/: test_unit.cpp
